--- a/Xcelerate/Views/Account/UserProfile/Profile.cshtml
+++ b/Xcelerate/Views/Account/UserProfile/Profile.cshtml
@@ -11,17 +11,15 @@
 			<h1 class="title-text-account">ACCOUNT INFORMATION</h1>
 			<section class="other-forms">
 				<ul>
-					<li><strong>First name:</strong> @Model.FirstName</li>
-					<li><strong>Last name:</strong> @Model.LastName</li>
-					<li><strong>Email address:</strong> @Model.Email</li>
+					<li><strong>Username:</strong> @Model.FirstName @Model.LastName</li>
 					<li><strong>Balance:</strong> @Model.Balance$</li>
-
+					<li><strong>Email:</strong> @Model.Email</li>
 				</ul>
 			</section>
-
 			<div asp-validation-summary="ModelOnly" class="error-container"></div>
 		</form>
 	</article>
+
 
 	<div class="chat-and-messages">
 		<article class="card-chat-messages">
@@ -63,7 +61,7 @@
 						<li class="messages-li">
 							<h2 style="color: @message.TitleColor" class="message-title">@message.Title</h2>
 							<p class="message-content">@Html.Raw(message.Content)</p>
-							<h3 class="timestamp" style="color: @message.TitleColor">@message.CreatedTime</h3>
+							<h3 class="timestamp">@message.CreatedTime</h3>
 						</li>
 					}
 				</ul>
