--- a/Xcelerate/wwwroot/css/Account/Login/Login.css
+++ b/Xcelerate/wwwroot/css/Account/Login/Login.css
@@ -44,11 +44,11 @@ svg {
     font-size: 60px;
     margin-top: 0px;
     margin-bottom: 0px;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none;
+    -moz-user-select: none; 
+    -ms-user-select: none;
+    user-select: none; 
 }
 
 input {
@@ -56,7 +56,7 @@ input {
     height: 30px;
 }
 
-button {
+.login-button {
     border-radius: 24px;
     padding: 10px;
     width: 150px;
@@ -66,22 +66,22 @@ button {
     color: white;
     font-size: 14px;
     transition: background-color 0.2s ease-in-out;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none; 
+    -ms-user-select: none;
+    user-select: none;
 }
 
 
 
 .title-text {
     margin-right: 100px;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; 
 }
 
 .other-forms {
@@ -94,11 +94,11 @@ button {
         color: white;
         font-size: 18px;
         text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
-        -webkit-touch-callout: none; /* iOS Safari */
-        -webkit-user-select: none; /* Safari */
-        -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-        user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -moz-user-select: none; 
+        -ms-user-select: none;
+        user-select: none; 
     }
 
     .other-forms input {
@@ -122,12 +122,13 @@ button {
         font-size: 16px;
         width: 500px;
         text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
-        -webkit-touch-callout: none; /* iOS Safari */
-        -webkit-user-select: none; /* Safari */
-        -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-        user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -moz-user-select: none; 
+        -ms-user-select: none;
+        user-select: none; 
     }
+
 .card-content {
     display: flex;
     padding: 0px 60px 0px 60px;
@@ -171,23 +172,23 @@ button {
 }
 
 .card-login {
-    margin: 120px 10px 314px 35%;
+    margin: 120px 10px 380px 35%;
     border-radius: 24px;
     background-repeat: no-repeat;
     background-size: cover;
     width: 510px;
-    height: 410px;
+    height: 345px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7px);
 }
 
 @keyframes colorAnimation {
     0% {
-        color: #ffffff; /* Whitish color */
+        color: #ffffff;
     }
 
     100% {
-        color: #ffff00; /* Yellowish color */
+        color: #ffff00;
     }
 }
 
