--- a/Xcelerate/wwwroot/css/Layout/Layout.css
+++ b/Xcelerate/wwwroot/css/Layout/Layout.css
@@ -29,6 +29,19 @@ html {
     backdrop-filter: blur(7px);
 }
 
+#authorize-list-authorized-as-admin > li.unread-messages-count a {
+    pointer-events: none;
+    cursor: default;
+    position: absolute;
+    right: 295px;
+    bottom: 30px;
+    margin: 0px;
+}
+
+#authorize-list-authorized-as-admin > li.unread-messages-count {
+    margin-right: -200px;
+}
+
 
 button {
     border-radius: 24px;
@@ -172,31 +185,42 @@ button {
 
     #authorize-list-authorized-as-admin li {
         margin-top: 15px;
-        margin-right: 28px;
-        margin-left: 0px;
+        margin-right: 0px;
+        margin-left: -40px;
+        width: 450px;
         text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
         direction: rtl;
     }
 
-        #authorize-list-authorized-as-admin li a:hover {
-            color: #ffcc00;
-        }
+    #authorize-list-authorized-as-admin > li.logout-state:nth-child(2) {
+        margin-left: -120px;
+        margin-right: 20px;
+    }
+
+    #authorize-list-authorized-as-admin li.logout-state {
+        margin-left: -100px;
+    }
+
+
+    #authorize-list-authorized-as-admin li a:hover {
+        color: #ffcc00;
+    }
 
 #authorize-list-authorized-as-admin {
     transition: width 0.3s ease-in-out;
     left: 1350px;
 }
 
-    #authorize-list-authorized-as-admin:hover {
-        width: 525px;
-    }
+#authorize-list-authorized-as-admin:hover {
+    width: 555px;
+}
 
-        #authorize-list-authorized-as-admin:hover .register-button-submit,
-        #authorize-list-authorized-as-admin:hover .login-button-submit,
-        #authorize-list-authorized-as-admin:hover .logout-button-submit {
-            opacity: 1;
-            transition: 1.1s ease-in-out;
-        }
+    #authorize-list-authorized-as-admin:hover .register-button-submit,
+    #authorize-list-authorized-as-admin:hover .login-button-submit,
+    #authorize-list-authorized-as-admin:hover .logout-button-submit {
+        opacity: 1;
+        transition: 1.1s ease-in-out;
+    }
 
     #authorize-list-authorized-as-admin a:hover {
         color: whitesmoke;
@@ -263,7 +287,7 @@ button {
         }
 
     #authorize-list-authorized a:hover {
-        color: whitesmoke; /* Change the text color on hover as needed */
+        color: whitesmoke;
     }
 
     #authorize-list-authorized .register-button-submit,
@@ -282,7 +306,6 @@ button {
 }
 
 #ul-list-unauthorized {
-    /*backdrop-filter: blur(2px);*/
     box-shadow: 10px 1px 40px 2px #3b2929;
     padding: 15px;
     border-radius: 50px;
@@ -453,14 +476,4 @@ footer {
     font-weight: normal;
     margin-bottom: 0px;
     font-size: 18px;
-}
-
-.unread-messages-count {
-    pointer-events: none;
-    cursor: default;
-    color: red;
-}
-
-.unread-messages-count-а {
-    color: red;
 }
