Some minor changes to login and register buttons

--- a/Xcelerate/Views/Account/Login.cshtml
+++ b/Xcelerate/Views/Account/Login.cshtml
@@ -20,13 +20,9 @@
 
 		</section>
 
-		<section class="check-box-input">
-@* 			<input type="checkbox" name="" id="check-box" />
-			<label for="check-box">I&nbsp&nbspaccept the Terms of Use & Privacy Policy</label> *@
-		</section>
 
 		<section class="button-object">
-			<button type="submit">LOGIN NOW</button>
+			<button class="login-button" type="submit">LOGIN</button>
 		</section>
 		<div asp-validation-summary="ModelOnly" class="error-container"></div>
 	</form>
