--- a/Xcelerate/Views/Account/Register.cshtml
+++ b/Xcelerate/Views/Account/Register.cshtml
@@ -45,7 +45,7 @@
 		</section>
 		<recaptcha form-id="card-content" />
 		<section class="button-object">
-			<button class="register-button" type="submit">REGISTER NOW</button>
+			<button class="register-button" type="submit">REGISTER</button>
 		</section>
 	</form>
 </article>
