Updated chats and fixed users ads page.

--- a/Xcelerate/Views/Ad/ChatIndex.cshtml
+++ b/Xcelerate/Views/Ad/ChatIndex.cshtml
@@ -86,3 +86,14 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js"></script>
 
 <partial name="_ValidationScriptsPartial" />
+
+<script>
+	function scrollMessagesToBottom() {
+		const messagesList = document.getElementById('messagesList');
+		messagesList.scrollTop = messagesList.scrollHeight;
+	}
+
+	window.onload = scrollMessagesToBottom;
+	console.log("deeznotwork");
+</script>
+
