--- a/Xcelerate/Views/Home/About.cshtml
+++ b/Xcelerate/Views/Home/About.cshtml
@@ -2,66 +2,57 @@
 
 <div class="parallax">
 
-    <partial name="_WebsiteName">
-    </partial>
+	<partial name="_WebsiteName">
+	</partial>
 
-        <img class="top-image-first"
-         src="~/Images/About/sky-top-image.png"
-             alt="sky-background-top" />
-        <img class="bottom-image-first"
-         src="~/Images/About/car-road-bottom-image.png"
-             alt="car-on-road-background-bottom" />
-    </div>
+	<img class="top-image-first"
+		 src="~/Images/About/sky-top-image.png"
+		 alt="sky-background-top" />
+	<img class="bottom-image-first"
+		 src="~/Images/About/car-road-bottom-image.png"
+		 alt="car-on-road-background-bottom" />
+</div>
 
-        <article class="main-content">
-            <div class="wrapper">
-                <p class="welcome-text">
-                    Welcome to
-                    <span class="website-name-on-welcome" filter-content="X">Xcelerate</span>
-                    <br />
-                <p class="sub-text-to-welcome">
-                    Your Pinnacle Destination for Exemplary Automotive Excellence!
-                </p>
-                </p>
-                <p class="information-text">
-                    At Xcelerate, we redefine the automotive experience, transcending boundaries to provide you with a journey like no other. <br>
-                    As your premier car dealership, we take pride in offering a curated selection of high-quality vehicles that exemplify the perfect fusion of performance, style, and innovation.
-                </p>
-                <p class="sub-point-first">Our Commitment to Excellence</p>
-                <p class="sub-point-first-information">
-                    At the core of Xcelerate is a commitment to excellence that permeates every aspect of our operation.<br>
-                    We believe in delivering not just cars but an unparalleled experience that exceeds expectations.<br> Our team is dedicated to ensuring your satisfaction, providing expert guidance, and facilitating a seamless process from selection to ownership.
-                </p>
-                <p class="sub-point-second">Curated Selection</p>
-                <p class="sub-point-second-information">
-                    Embark on a journey of automotive discovery with our meticulously curated selection of vehicles. <br>
-                    Whether you crave the thrill of a high-performance sports car, the versatility of an SUV, or the sophistication of a luxury sedan, Xcelerate offers a diverse range to cater to every taste and lifestyle. <br>
-                    Each vehicle in our inventory undergoes rigorous inspection to ensure its quality, reliability, and performance.
-                </p>
-                <p class="sub-point-third">Experience the Xcelerate Difference</p>
-                <p class="sub-point-third-information">
-                    Discover the Xcelerate difference – where passion meets precision, and excellence is not just a standard but a way of life.<br>
-                    We invite you to explore our showroom, test drive your dream car, and let us be a part of your journey towards automotive greatness.
-                </p>
-            </div>
-        </article>
-        <div class="parallax">
-            <svg xmlns="http://www.w3.org/2000/svg">
-                <!-- filterUnits is required to prevent clipping the blur outside the viewBox -->
+<article class="main-content">
+	<div class="wrapper">
+		<p class="welcome-text">
+			Welcome to
+			<span class="website-name-on-welcome" filter-content="X">Xcelerate</span>
+			<br />
+		<p class="sub-text-to-welcome">
+			Your Pinnacle Destination for Exemplary Automotive Excellence!
+		</p>
+		</p>
+		<p class="information-text">
+			At Xcelerate, we redefine the automotive experience, transcending boundaries to provide you with a journey like no other. <br>
+			As your premier car dealership, we take pride in offering a curated selection of high-quality vehicles that exemplify the perfect fusion of performance, style, and innovation.
+		</p>
+		<p class="sub-point-first">Our Commitment to Excellence</p>
+		<p class="sub-point-first-information">
+			At the core of Xcelerate is a commitment to excellence that permeates every aspect of our operation.<br>
+			We believe in delivering not just cars but an unparalleled experience that exceeds expectations.<br> Our team is dedicated to ensuring your satisfaction, providing expert guidance, and facilitating a seamless process from selection to ownership.
+		</p>
+		<p class="sub-point-second">Curated Selection</p>
+		<p class="sub-point-second-information">
+			Embark on a journey of automotive discovery with our meticulously curated selection of vehicles. <br>
+			Whether you crave the thrill of a high-performance sports car, the versatility of an SUV, or the sophistication of a luxury sedan, Xcelerate offers a diverse range to cater to every taste and lifestyle. <br>
+			Each vehicle in our inventory undergoes rigorous inspection to ensure its quality, reliability, and performance.
+		</p>
+		<p class="sub-point-third">Experience the Xcelerate Difference</p>
+		<p class="sub-point-third-information">
+			Discover the Xcelerate difference – where passion meets precision, and excellence is not just a standard but a way of life.<br>
+			We invite you to explore our showroom, test drive your dream car, and let us be a part of your journey towards automotive greatness.
+		</p>
+	</div>
+</article>
+<div class="parallax">
 
-                <filter id="motion-blur-filter" filterUnits="userSpaceOnUse">
-                    <!-- We only want horizontal blurring. x: 100, y: 0 -->
-
-                    <feGaussianBlur stdDeviation="100 0"></feGaussianBlur>
-                </filter>
-            </svg>
-
-            <span class="explore-text" filter-content="X">Xplore</span>
-            <img class="top-image-second"
-         src="~/Images/About/mountains-top-image.png"
-                 alt="mountains-background-top" />
-            <img class="bottom-image-second"
-         src="~/Images/About/jeep-offroad-bottom-image.png"
-                 alt="jeep-off-roading-background-bottom" />
-        </div>
+	<span class="explore-text">Xplore</span>
+	<img class="top-image-second"
+		 src="~/Images/About/mountains-top-image.png"
+		 alt="mountains-background-top" />
+	<img class="bottom-image-second"
+		 src="~/Images/About/jeep-offroad-bottom-image.png"
+		 alt="jeep-off-roading-background-bottom" />
+</div>
 
