--- a/Xcelerate/Views/Shared/_AllUserCarAds.cshtml
+++ b/Xcelerate/Views/Shared/_AllUserCarAds.cshtml
@@ -24,10 +24,12 @@
 						<li><strong>Price:</strong> @ad.Price$</li>
 						<li><strong>Year:</strong> @ad.Year</li>
 						<li><strong>Engine:</strong> @ad.Engine</li>
+						<li><strong>HorsePower:</strong> @ad.HorsePower</li>
 						<li><strong>Condition:</strong> @ad.Condition</li>
 						<li><strong>Euro Standard:</strong> @ad.EuroStandard</li>
 						<li><strong>Fuel Type:</strong> @ad.FuelType</li>
 						<li><strong>Owner:</strong> @ad.FirstName @ad.LastName</li>
+						<li><strong>Created On:</strong> @ad.CreatedOn</li>
 					</ul>
 					<footer class="bottom-text">
 						<i class="edit-delete-cancel-buttons">
